--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@types/lodash": "^4.14.161",
     "antd": "^4.6.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "recharts": "^1.8.5",
     "styled-components": "^5.2.0",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/recharts": "^1.8.16",
     "@types/styled-components": "^5.1.3",
     "@types/styled-system": "^5.1.10",
     "babel-core": "^6.26.3",
