--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "clean": "shx rm -rf ./.cache ./dist",
     "mrproper": "yarn run clean && shx rm -rf node_modules"
   },
