--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url https://meyhem.github.io/marriot",
+    "release-gh": "shx mkdir -p ./docs && shx cp ./dist/* ./docs",
     "clean": "shx rm -rf ./.cache ./dist",
     "mrproper": "yarn run clean && shx rm -rf node_modules"
   },
